# aaa

./: .gitignore  Cargo.toml  Makefile  README.md  SELF_CORRECTION_REPORT.md  STAGE4_SELF_CORRECTION_REPORT.md  STAGE6_AUDIT_REPORT.md  STAGE7_SELF_CORRECTION_REPORT.md  STAGE8_SELF_CORRECTION_REPORT.md  STAGE9_SELF_CORRECTION_REPORT.md  STAGE_22_SELF_CORRECTION_REPORT.md  STAGE_26_AUDIT_REPORT.md  STAGE_27_AUDIT_REPORT.md  STAGE_43_AUDIT_REPORT.md  pyproject.toml  requirements.txt
crates/nexus_acausal/: Cargo.toml
crates/nexus_acausal/src/: lib.rs
crates/nexus_acausal/src/basilisk/: future_regret_penalty.rs  preemptive_alignment.rs  singularity_audit_sim.rs
crates/nexus_acausal/src/induction/: kolmogorov_complexity.rs  levin_search.rs  universal_prior_approx.rs
crates/nexus_acausal/src/tdt/: logical_handshake.rs  modal_logic_prover.rs  source_code_mirror.rs
crates/nexus_acausal/src/trade/: acausal_payment.rs  counterfactual_mugging.rs  multiverse_utility.rs
crates/nexus_adapters/: Cargo.toml
crates/nexus_adapters/src/: binance_ws_signer.rs  fix_binary_encoder.rs  lib.rs  zero_alloc_buffer_writer.rs
crates/nexus_alpha/: Cargo.toml
crates/nexus_alpha/src/: lib.rs
crates/nexus_alpha/src/consumer/: micro_price_calculator.rs  mod.rs  rolling_window_buffer.rs  spsc_reader.rs
crates/nexus_alpha/src/fusion/: bayesian_conviction.rs  regime_hmm.rs  signal_aggregator.rs
crates/nexus_alpha/src/micro/: hawkes_intensity.rs  kalman_efficient_price.rs  vpin_toxicity.rs
crates/nexus_alpha/src/orderflow/: volume_profile_simd.rs
crates/nexus_alpha/src/signals/: mod.rs  order_book_imbalance.rs  volume_bucket_aggregator.rs  vpin_toxicity.rs
crates/nexus_alpha/src/smc/: liquidity_voids.rs  order_blocks.rs
crates/nexus_brokerage/: Cargo.toml
crates/nexus_brokerage/src/: lib.rs
crates/nexus_brokerage/src/dark_pools/: conditional_pegging.rs  fix_tag_value_parser.rs  ioi_state_machine.rs  mod.rs
crates/nexus_brokerage/src/ledger/: mod.rs  shadow_double_entry.rs
crates/nexus_brokerage/src/margin/: cross_margin_netting.rs  mod.rs
crates/nexus_brokerage/src/reconciliation/: fix_position_parser.rs  mod.rs
crates/nexus_core/: Cargo.toml  build.rs
crates/nexus_core/src/: lib.rs  types.rs
crates/nexus_core/src/concurrency/: mod.rs  spsc_ring.rs
crates/nexus_core/src/events/: message_bus.rs  mod.rs
crates/nexus_core/src/memory/: arena.rs  cache_padder.rs  mod.rs
crates/nexus_core/src/orchestrator/: global_event_bus.rs  master_state_machine.rs
crates/nexus_core/src/time/: mod.rs  tsc_clock.rs
crates/nexus_derivatives/: Cargo.toml
crates/nexus_derivatives/src/: lib.rs
crates/nexus_derivatives/src/greeks/: analytical_greeks.rs  finite_difference_bump.rs  mod.rs  simd_portfolio_aggregator.rs
crates/nexus_derivatives/src/math/: fast_cdf_erf.rs  mod.rs
crates/nexus_derivatives/src/pricing/: black_scholes_fast.rs  mod.rs  sabr_hybrid.rs
crates/nexus_derivatives/src/strategies/: dispersion_trader.rs  mod.rs  term_structure_arb.rs  vol_risk_premium.rs
crates/nexus_derivatives/src/surface/: arbitrage_enforcer.rs  mod.rs  svi_parameterization.rs  vol_surface_builder.rs
crates/nexus_evolution/: AUDIT_REPORT.md  Cargo.toml
crates/nexus_evolution/src/: lib.rs
crates/nexus_evolution/src/fitness/: crowding_distance.rs  nsga2_sorter.rs  orthogonality_penalty.rs
crates/nexus_evolution/src/gp/: arena_allocator.rs  expression_tree.rs  primitive_set.rs
crates/nexus_evolution/src/jit/: cranelift_compiler.rs
crates/nexus_evolution/src/operators/: point_mutation.rs  subtree_crossover.rs
crates/nexus_evolution/src/sandbox/: ast_evaluator.rs  cpcv_overfit_guard.rs
crates/nexus_execution/: Cargo.toml
crates/nexus_execution/src/: lib.rs
crates/nexus_execution/src/algos/: child_order_generator.rs  iceberg_sniper.rs  iceberg_state.rs  mod.rs  pov_vwap_tracker.rs  queue_position_tracker.rs
crates/nexus_execution/src/sor/: mod.rs  smart_order_router.rs
crates/nexus_execution/src/wapi/: mod.rs  recvwindow_clock_sync.rs  wapi_connection_manager.rs  zero_alloc_hmac_signer.rs
crates/nexus_features/: Cargo.toml
crates/nexus_features/src/: lib.rs  micro_price_calculator.rs  simd_rolling_windows.rs  volume_bar_aggregator.rs
crates/nexus_ffi/: Cargo.toml
crates/nexus_ffi/src/: async_runtime.rs  bridge.rs  lib.rs  zero_copy_buffer.rs
crates/nexus_hft/: Cargo.toml
crates/nexus_hft/src/: lib.rs
crates/nexus_holography/: Cargo.toml
crates/nexus_holography/src/: lib.rs
crates/nexus_holography/src/entropy/: dark_pool_volume_est.rs  minimal_geodesic_tracer.rs  mod.rs  ryu_takayanagi_xray.rs
crates/nexus_holography/src/geometry/: ads_cft_dictionary.rs  boundary_operator_map.rs  mod.rs  poincare_metric.rs
crates/nexus_ingest/: Cargo.toml
crates/nexus_ingest/src/: lib.rs
crates/nexus_iot/: Cargo.toml
crates/nexus_iot/benches/: fft_bench.rs
crates/nexus_iot/src/: lib.rs
crates/nexus_kardashev/: Cargo.toml
crates/nexus_kardashev/src/: lib.rs
crates/nexus_macro/: Cargo.toml
crates/nexus_macro/src/: lib.rs
crates/nexus_memetics/: Cargo.toml
crates/nexus_memetics/src/: lib.rs
crates/nexus_microstructure/: Cargo.toml
crates/nexus_microstructure/src/: lib.rs
crates/nexus_mlops/: Cargo.toml
crates/nexus_mlops/src/: lib.rs
crates/nexus_mm/: Cargo.toml
crates/nexus_mm/src/: lib.rs
crates/nexus_neuro/: Cargo.toml
crates/nexus_neuro/src/: lib.rs
crates/nexus_nlp/: Cargo.toml  SELF_AUDIT_REPORT.md
crates/nexus_nlp/src/: lib.rs
crates/nexus_omega/: Cargo.toml
crates/nexus_omega/src/: lib.rs
crates/nexus_oms/: Cargo.toml
crates/nexus_oms/src/: fixed_point_math.rs  lib.rs  lock_free_position_tracker.rs  order_state_machine.rs
crates/nexus_orchestrator/: Cargo.toml
crates/nexus_orchestrator/src/: lib.rs
crates/nexus_orderbook/: Cargo.toml
crates/nexus_orderbook/src/: l3_slab_allocator.rs  lib.rs  lob_reconstructor.rs  price_ladder.rs
crates/nexus_photonics/: Cargo.toml
crates/nexus_photonics/src/: lib.rs
crates/nexus_quantum/: Cargo.toml  STAGE_21_AUDIT_REPORT.md
crates/nexus_quantum/src/: lib.rs
(+832 files in other folders)
