[package]
name = "nexus_alpha"
version = "0.1.0"
edition = "2021"
description = "Advanced Alpha Generation, SMC Feature Extraction & Signal Fusion for NEXUS-OMEGA"

[dependencies]
nexus_core = { path = "../nexus_core" }
nexus_orderbook = { path = "../nexus_orderbook" }
nexus_features = { path = "../nexus_features" }

# SIMD acceleration
stdsimd = "0.1"
wide = "0.7"

# Math & Statistics
nalgebra = "0.32"
statrs = "0.16"
rand = "0.8"
rand_distr = "0.4"

# Serialization (zero-copy where possible)
simd-json = "0.13"
serde = { version = "1.0", features = ["derive"] }

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# Logging
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "alpha_benchmarks"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]
