[package]
name = "nexus_memetics"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
ndarray = { version = "0.15", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "memetics_bench"
harness = false
