[package]
name = "nexus_photonics"
version = "0.1.0"
edition = "2021"
description = "Stage 32: Silicon Photonics, Optical Matrix Multiplication & Light-Speed Interconnects"
license = "MIT"

[dependencies]
# Core math and linear algebra
nalgebra = { version = "0.32", features = ["serde-serialize"] }
num-complex = "0.4"

# Serialization for weight banks and mesh configs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# High-precision arithmetic for Clements decomposition
rug = "1.22"

# Error handling
thiserror = "1.0"

# Async runtime for control loops
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"

# FFT for lock-in amplifier
rustfft = "6.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "mzi_mesh_benchmarks"
harness = false
